--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/hellismine.loader.js";
+      var loaderUrl = buildUrl + "/HELLisMINE.loader.js";
       var config = {
-        dataUrl: buildUrl + "/hellismine.data",
-        frameworkUrl: buildUrl + "/hellismine.framework.js",
-        codeUrl: buildUrl + "/hellismine.wasm",
+        dataUrl: buildUrl + "/HELLisMINE.data",
+        frameworkUrl: buildUrl + "/HELLisMINE.framework.js",
+        codeUrl: buildUrl + "/HELLisMINE.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "kara_age",
