Build on Commit: 8bb360ff8bf213700637e139df3d9c6dc916d8de

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>HELL IS MINE | Debug Build</title>
+    <title>HELL is MINE | Debug Build</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -64,7 +64,7 @@
         codeUrl: buildUrl + "/HELLisMINE.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "HELL IS MINE",
+        productName: "HELL is MINE",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
